Version history of the R genetic analysis package (R/gap)

Version 1.5-2
15-08-2023	Add `settings.meta(method.tau="DL")` and random= in examples/argument for METAL_forestplot()
		Extend gc.lambda() for -log10(P) and drop -log10(P)<2 for IL-12B plot in gap.Rmd
		Amend circos.mhtplot2() with an addtional track
		Add ci2ms() for PhenoScanner/GWAS Catalog lookup and refine h2_mzdz()
		Drop genetics/GeneticsDesign reference in pbsize2() and backslash (\%) in tscc()
		Rename SNP functions and document hg18/19/38
		Reorganize DESCRIPTION, adding Roxygen: list(markdown = TRUE), and document in Markdown
		Import/amend in line with Rdpack/Remove INDEX to suppress error message/ and \insertRef
		Refine gap.Rmd and shinygap.Rmd
		Revise CITATION for the new style

Version 1.5-1
22-01-2023	Add rationale, @graham21 and @vosa21 for cs() together with minor changes in gap.Rmd
		gcx.c: 49, 1209, short * to short int []
		hap.h:37, hap_c.c: 1001, char *
		Modify mhtplot.trunc()
		Export several internal functions
		Fix logp.Rd

Version 1.5
12-01-2023	Apply bookdown to shinygap.Rmd
		Suggest mets in gap.examples instead
		Initialize r=0 at lines 252, 695 of gcontrol_c.c
		Remove "typedef enum{false=0,true=1} boolean" in pgc.h and use false/true=0/1 in pgc_c.c
		Modify gap.Rmd

Version 1.4-2
09-01-2023	Only use %s as in makeped_c.c/fscanf("%s",&response)
		Add "and" in gap.Rmd Summary

Version 1.4-1
08-01-2023	Increase all 1s, 2s to 3s as in makeped_c.c/fscanf("%1s",&response)
		Fix typo `constrast` in gap.Rmd

Version 1.4
07-01-2023	Suggest bookdown

Version 1.3-2
07-01-2023	gap.Rmd now uses bookdown with `convert -resize 60% IL.12B-mhtplot.trunc.png IL-12B.png`
			and appropriate citations
		Rename `gsmr` to `mr` with the test data reading from the console
		Replace path.package() with find.package()
		Move `...` from pdf() to meta() in METAL_forestplot()
		sprintf --> snprintf following https://developer.r-project.org/blosxom.cgi/R-devel/2022/12/04
		Simplify miamiplot2 code