@@ -1,7 +1,8 @@
 Version history of the R genetic analysis package (R/gap)
 
 Version 1.5-2
-15-08-2023	Add `settings.meta(method.tau="DL")` and random= in examples/argument for METAL_forestplot()
+15-08-2023	Add `settings.meta(method.tau="DL")` examples for METAL_forestplot()
+		Overwrite metagen(random=) and keep `meta` in METAL_forestplot() only
 		Extend gc.lambda() for -log10(P) and drop -log10(P)<2 for IL-12B plot in gap.Rmd
 		Amend circos.mhtplot2() with an addtional track
 		Add ci2ms() for PhenoScanner/GWAS Catalog lookup and refine h2_mzdz()
